# datadog-log-py

./: .gitignore  CHANGELOG.md  LICENSE  Pipfile  README.md  publish.sh  pyproject.toml  setup.py
datadoglog/: __init__.py  formatter.py  init.py
